@@ -17750,8 +17750,12 @@ display_mode_element (it, depth, field_width, precision, elt, props, risky)
 	  }
 	else if (STRINGP (car) || CONSP (car))
 	  {
-	    register int limit = 50;
-	    /* Limit is to protect against circular lists.  */
+	    register int limit = 5000;
+	    /* Limit is to protect against circular lists.
+	       The limit used to be 50, but if you use enough minor modes,
+	       minor-mode-alist will easily grow past 50.  Circular lists
+	       are rather unlikely, so it's better for the limit to be
+	       "too large" rather than "too small".  */
 	    while (CONSP (elt)
 		   && --limit > 0
 		   && (precision <= 0 || n < precision))
